# TheLastRonin

./: .clang-format  .gitignore  CMakeLists.txt  Config.txt  LICENSE  README.md  TheLastRonin.iss
.github/workflows/: release.yml
include/: Settings.hpp
include/core/: TheLastRonin.hpp
include/io/: Parser.hpp
include/utils/: Logger.hpp
src/: CMakeLists.txt  Main.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/album/: Album.h  AlbumCard.cpp  AlbumCard.h  AlbumManager.cpp  AlbumManager.h
src/components/: CoverImageWidget.cpp  CoverImageWidget.h
src/components/dialog/: AddPlaylistDialog.cpp  AddPlaylistDialog.h  AddTrackDialog.cpp  AddTrackDialog.h  PlaylistDialog.cpp  PlaylistDialog.h
src/components/home/: PlaylistCard.cpp  PlaylistCard.h  PlaylistGrid.cpp  PlaylistGrid.h
src/components/playlist/: MiniPlayerWindow.cpp  MiniPlayerWindow.h  PlaylistDetails.cpp  PlaylistDetails.h  PlaylistManager.cpp  PlaylistManager.h  TrackList.cpp  TrackList.h
src/components/shared/: CoverImageWidget.cpp  CoverImageWidget.h  MiniPlayer.cpp  MiniPlayer.h  MiniPlayerWindow.cpp  MiniPlayerWindow.h  NavigationBar.cpp  NavigationBar.h  PlaybackBar.cpp  PlaybackBar.h  TrackList.cpp  TrackList.h
src/constants/: Colors.h
src/core/: Logger.cpp  Logger.h  TheLastRonin.cpp
src/dao/: PlaylistDAO.cpp  PlaylistDAO.h  SettingsDAO.cpp  SettingsDAO.h  TrackDAO.cpp  TrackDAO.h  UserDAO.cpp  UserDAO.h
src/database/: Container.cpp  Container.h  DatabaseConstants.h  DatabaseManager.cpp  DatabaseManager.h  ORM.cpp  ORM.h  QueryBuilder.cpp  QueryBuilder.h
src/dialog/: AddAlbumDialog.cpp  AddAlbumDialog.h  AddPlaylistDialog.cpp  AddPlaylistDialog.h  AddTrackDialog.cpp  AddTrackDialog.h  PlaylistDialog.h
src/events/: AppEvents.cpp  AppEvents.h
src/io/: Parser.cpp
src/manager/: LanguageManager.cpp  LanguageManager.h  ProcessManager.cpp  ProcessManager.h
src/model/: Model.cpp  Model.h  Playlist.cpp  Playlist.h  PlaylistTrack.cpp  PlaylistTrack.h  Setting.cpp  Setting.h  Track.cpp  Track.h  User.cpp  User.h
src/page/: AlbumPage.cpp  AlbumPage.h  PlaylistPage.cpp  PlaylistPage.h
src/playlist/: Playlist.h  PlaylistCard.cpp  PlaylistCard.h  PlaylistDetailsWidget.cpp  PlaylistDetailsWidget.h  PlaylistGridController.cpp  PlaylistGridController.h  PlaylistManager.cpp  PlaylistManager.h  Track.h  TrackListWidget.cpp  TrackListWidget.h
src/repository/: AlbumRepository.cpp  AlbumRepository.h  IPlaylistRepository.h  ISettingRepository.h  ITrackRepository.h  PlaylistRepository.cpp  PlaylistRepository.h  Repository.cpp  Repository.h  SettingRepository.cpp  SettingRepository.h  SettingsRepository.cpp  SettingsRepository.h  TrackRepository.cpp  TrackRepository.h  UserRepository.cpp  UserRepository.h
src/service/: AudioMetadataService.cpp  AudioMetadataService.h  LanguageService.cpp  LanguageService.h  PlaylistService.cpp  PlaylistService.h  SpotifyService.cpp  SpotifyService.h  TrackService.cpp  TrackService.h  YouTubeMusicService.cpp  YouTubeMusicService.h
src/styles/: AppStyle.cpp  AppStyle.h  ButtonStyle.cpp  ButtonStyle.h  ComboBoxStyle.cpp  ComboBoxStyle.h  InputStyle.cpp  InputStyle.h  ListStyle.cpp  ListStyle.h  SliderStyle.cpp  SliderStyle.h
src/utils/: Logger.cpp
src/window/: BaseWindow.cpp  BaseWindow.h  HomeWindow.cpp  HomeWindow.h  LibraryWindow.cpp  LibraryWindow.h  MainWindow.cpp  MainWindow.h  PlaylistPage.cpp  PlaylistWindow.cpp  PlaylistWindow.h  SettingsWindow.cpp  SettingsWindow.h  SpotifyWindow.cpp  SpotifyWindow.h  YouTubeMusicWindow.cpp  YouTubeMusicWindow.h
translations/: app_jp.ts  app_nl.ts
